[FEATURE] move default trans to repo and extra trans to hasura app_language

--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -18,6 +18,9 @@
   "CraftPageCollectionPage.CraftPageCollectionTable.url": "網址",
   "CraftPageCollectionPage.CraftPageReplicateModal.originPageName": "原始的頁面名稱",
   "CraftPageCollectionPage.CraftPageReplicateModal.originPath": "原始的網址路徑",
+  "ForbiddenPage.*.home": "Home",
+  "ForbiddenPage.*.noAuthority": "You are not authorized to view this page.",
+  "ForbiddenPage.*.previousPage": "Previous",
   "activity.label.activityIntroduction": "活動介紹",
   "activity.label.activityLocation": "活動地址",
   "activity.label.allActivity": "實體 & 線上",
@@ -356,7 +359,7 @@
   "common.label.price": "售價",
   "common.label.profileAdminTitle": "帳號資料",
   "common.label.profileBasic": "基本資料",
-  "common.label.program": "單次課程",
+  "common.label.program": "課程",
   "common.label.programContent": "課程內容",
   "common.label.programPackage": "課程組合",
   "common.label.programPlan": "訂閱方案",
@@ -474,7 +477,7 @@
   "common.product.allPodcastProgram": "全部廣播",
   "common.product.allProgram": "全部單次課程",
   "common.product.allProgramPackagePlan": "全部課程組合",
-  "common.product.allProgramPlan": "全部訂閱課程",
+  "common.product.allProgramPlan": "全部課程方案",
   "common.product.allProjectPlan": "全部專案",
   "common.product.appointmentPlan": "預約",
   "common.product.card": "會員卡",
@@ -1267,17 +1270,36 @@
   "page.ProgramProgressCollectionAdminPage.all": "全部",
   "page.ProgramProgressCollectionAdminPage.allMembers": "全部會員",
   "page.ProgramProgressCollectionAdminPage.allPrograms": "全部課程",
+  "page.ProgramProgressCollectionAdminPage.categories": "課程分類",
   "page.ProgramProgressCollectionAdminPage.chooseMember": "選擇會員",
   "page.ProgramProgressCollectionAdminPage.chooseProgram": "選擇課程",
   "page.ProgramProgressCollectionAdminPage.chooseProgramCategory": "選擇課程分類",
   "page.ProgramProgressCollectionAdminPage.chooseProperty": "選擇欄位",
   "page.ProgramProgressCollectionAdminPage.containKeyword": "關鍵字包含",
+  "page.ProgramProgressCollectionAdminPage.exercisePassedAt": "測驗通過時間",
+  "page.ProgramProgressCollectionAdminPage.exerciseScores": "測驗分數",
+  "page.ProgramProgressCollectionAdminPage.firstWatchedAt": "初次觀看時間",
+  "page.ProgramProgressCollectionAdminPage.lastWatchedAt": "最後觀看時間",
   "page.ProgramProgressCollectionAdminPage.member": "會員",
+  "page.ProgramProgressCollectionAdminPage.memberEmail": "Email",
+  "page.ProgramProgressCollectionAdminPage.memberName": "姓名",
+  "page.ProgramProgressCollectionAdminPage.practices": "作業",
   "page.ProgramProgressCollectionAdminPage.program": "課程",
+  "page.ProgramProgressCollectionAdminPage.programContentDuration": "單元時長(分)",
+  "page.ProgramProgressCollectionAdminPage.programContentSectionTitle": "章節名稱",
+  "page.ProgramProgressCollectionAdminPage.programContentTitle": "單元名稱",
+  "page.ProgramProgressCollectionAdminPage.programContentType": "單元類型",
+  "page.ProgramProgressCollectionAdminPage.programTitle": "課程名稱",
   "page.ProgramProgressCollectionAdminPage.property": "自訂欄位",
   "page.ProgramProgressCollectionAdminPage.selectedCategory": "指定分類",
   "page.ProgramProgressCollectionAdminPage.selectedMember": "指定會員",
   "page.ProgramProgressCollectionAdminPage.selectedProgram": "指定課程",
+  "page.ProgramProgressCollectionAdminPage.totalPercentage": "總課程完成率",
+  "page.ProgramProgressCollectionAdminPage.watchedDuration": "學習時間(分)",
+  "page.ProgramProgressCollectionAdminPage.watchedPercentage": "學習進度",
+  "pageProgramProgressCollectionAdminPage.exerciseFailed": "未通過",
+  "pageProgramProgressCollectionAdminPage.exercisePassed": "通過",
+  "pageProgramProgressCollectionAdminPage.exerciseStatus": "測驗狀態",
   "pages.salesAdminPage.export": "匯出資料",
   "pages.salesAdminPage.import": "匯入資料",
   "payment.status.invoiceFailed": "開立失敗 {errorCode}",
@@ -1289,22 +1311,35 @@
   "permission.ACTIVITY_CATEGORY_READ": "查看活動分類",
   "permission.ACTIVITY_CATEGORY_WRITE": "編寫活動分類",
   "permission.ACTIVITY_ENROLLMENT_READ": "查看活動報名名單",
+  "permission.ACTIVITY_NORMAL": "個人活動功能",
   "permission.ACTIVITY_PUBLISHED": "發布實體活動",
   "permission.ACTIVITY_READ": "查看實體活動",
   "permission.ACTIVITY_SESSION_WRITE": "編寫活動場次",
   "permission.ACTIVITY_TICKET_WRITE": "編寫活動票卷",
   "permission.ACTIVITY_WRITE": "編寫活動",
+  "permission.ANALYSIS_ADMIN": "所有數據分析功能",
   "permission.APPOINTMENT_DELETE": "刪除預約方案",
   "permission.APPOINTMENT_HISTORY": "查看預約紀錄",
   "permission.APPOINTMENT_PERIOD_ADMIN": "所有預約記錄功能",
   "permission.APPOINTMENT_PERIOD_DELETE": "刪除預約時段",
+  "permission.APPOINTMENT_PERIOD_NORMAL": "個人預約紀錄功能",
   "permission.APPOINTMENT_PERIOD_WRITE": "編寫預約時段",
   "permission.APPOINTMENT_PLAN_ADMIN": "所有預約方案功能",
+  "permission.APPOINTMENT_PLAN_NORMAL": "個人預約方案功能",
   "permission.APPOINTMENT_PUBLISH": "發布預約方案",
   "permission.APPOINTMENT_READ": "查看預約方案",
   "permission.APPOINTMENT_WRITE": "編寫預約方案",
   "permission.APP_SETTING_ADMIN": "所有網站管理功能",
   "permission.BACKSTAGE_ENTER": "可進入後台",
+  "permission.CHECK_MEMBER_COIN": "查看會員代幣紀錄",
+  "permission.CHECK_MEMBER_HISTORY": "查看會員歷程紀錄",
+  "permission.CHECK_MEMBER_ORDER": "查看會員訂單記錄",
+  "permission.CHECK_MEMBER_PAGE_ACTIVITY_INFO": "查看會員主頁活動資訊",
+  "permission.CHECK_MEMBER_PAGE_APPOINTMENT_INFO": "查看會員主頁預約資訊",
+  "permission.CHECK_MEMBER_PAGE_MERCHANDISE_INFO": "查看會員主頁商品紀錄",
+  "permission.CHECK_MEMBER_PAGE_PODCAST_INFO": "查看會員主頁廣播資訊",
+  "permission.CHECK_MEMBER_PAGE_PROGRAM_INFO": "查看會員主頁課程資訊",
+  "permission.CHECK_MEMBER_PAGE_PROJECT_INFO": "查看會員主頁專案資訊",
   "permission.COIN_ADMIN": "所有代幣紀錄功能",
   "permission.CONTRACT_APPROVED_AT_EDIT": "編輯審核通過日期",
   "permission.CONTRACT_ATTACHMENT_EDIT": "編輯上傳檔案",
@@ -1316,7 +1351,8 @@
   "permission.CONTRACT_RECOGNIZE_PERFORMANCE_EDIT": "編輯績效金額",
   "permission.CONTRACT_REFUND_AT_EDIT": "編輯提出退費日期",
   "permission.CONTRACT_REVENUE_SHARING_EDIT": "編輯與新增業務分潤",
-  "permission.CONTRACT_VALUE_VIEW": "檢視合約",
+  "permission.CONTRACT_VALUE_VIEW_ADMIN": "檢視所有的合約",
+  "permission.CONTRACT_VALUE_VIEW_NORMAL": "檢視自己建立的合約",
   "permission.COUPON_CODE_EXPORT": "匯出折扣碼",
   "permission.COUPON_PLAN_ADMIN": "所有折價方案功能",
   "permission.COUPON_PLAN_READ": "查看折價方案",
@@ -1345,6 +1381,7 @@
   "permission.POST_CATEGORY_READ": "查看文章分類",
   "permission.POST_CATEGORY_WRITE": "編寫文章分類",
   "permission.POST_DELETE": "刪除文章",
+  "permission.POST_NORMAL": "個人文章管理功能",
   "permission.POST_PUBLISH": "發布文章",
   "permission.POST_READ": "查看文章",
   "permission.POST_VIEWS_READ": "查看文章瀏覽數",
@@ -1357,10 +1394,12 @@
   "permission.PROGRAM_CATEGORY_READ": "查看課程分類",
   "permission.PROGRAM_CATEGORY_WRITE": "編寫課程分類",
   "permission.PROGRAM_DELETE": "刪除課程",
-  "permission.PROGRAM_ISSUE_ADMIN": "所有課程課程問題功能",
+  "permission.PROGRAM_ISSUE_ADMIN": "所有課程問題功能",
   "permission.PROGRAM_ISSUE_DELETE": "刪除課程問題",
+  "permission.PROGRAM_ISSUE_NORMAL": "個人課程問題功能",
   "permission.PROGRAM_ISSUE_READ": "查看課程問題",
   "permission.PROGRAM_ISSUE_WRITE": "編寫課程問題",
+  "permission.PROGRAM_NORMAL": "個人課程管理功能",
   "permission.PROGRAM_PACKAGE_ADMIN": "所有課程組合功能",
   "permission.PROGRAM_PACKAGE_CATEGORY_ADMIN": "所有課程組合分類功能",
   "permission.PROGRAM_PACKAGE_PUBLISH": "發布/下架課程組合",
@@ -1375,10 +1414,17 @@
   "permission.PROJECT_ADMIN": "所有專案功能",
   "permission.PROJECT_CATEGORY_ADMIN": "專案分類功能",
   "permission.PROJECT_FUNDING_ADMIN": "募資專案功能",
+  "permission.PROJECT_FUNDING_NORMAL": "個人募資專案功能",
+  "permission.PROJECT_NORMAL": "個人專案功能",
   "permission.PROJECT_ON_SALE_ADMIN": "促銷專案功能",
   "permission.PROJECT_PRE_ORDER_ADMIN": "預購專案功能",
+  "permission.PROJECT_PRE_ORDER_NORMAL": "個人預購專案功能",
   "permission.SALES_CALL_ADMIN": "檢視業務專區",
   "permission.SALES_EXPORT": "匯出所有訂單",
+  "permission.SALES_LEAD_ADMIN": "名單撥打",
+  "permission.SALES_LEAD_DELIVERY_ADMIN": "名單分派功能",
+  "permission.SALES_LEAD_SELECTOR_ADMIN": "名單撥打選擇器功能",
+  "permission.SALES_PERFORMANCE_ADMIN": "業績總表",
   "permission.SALES_READ": "查看所有訂單",
   "permission.SALES_RECORDS_ADMIN": "查看所有銷售紀錄",
   "permission.SALES_RECORDS_CREATOR": "查看創作者銷售紀錄",
@@ -1392,6 +1438,7 @@
   "permission.VOUCHER_PLAN_WRITE": "編寫兌換方案",
   "permission.label.activity": "活動",
   "permission.label.all": "所有權限",
+  "permission.label.analysis": "數據分析",
   "permission.label.appAdmin": "網站管理",
   "permission.label.appointment": "預約服務",
   "permission.label.backstage": "後台權限",
@@ -1406,6 +1453,8 @@
   "permission.label.programProgress": "學習進度",
   "permission.label.project": "專案管理",
   "permission.label.sales": "銷售管理",
+  "permission.label.salesLead": "名單派發",
+  "permission.label.salesManagement": "業務管理",
   "permission.label.task": "待辦管理",
   "permission.label.voucher": "兌換方案",
   "permissionAdmin.label.permissionGroup": "權限組",
@@ -1509,7 +1558,7 @@
   "program.label.applyModalTitle": "送審備註",
   "program.label.approvalHistory": "審核紀錄",
   "program.label.approved": "審核通過，未發佈",
-  "program.label.availableForAllContent": "可看所有內容",
+  "program.label.availableForAllContent": "可看課程所有內容",
   "program.label.availableForPastContent": "可看過去內容",
   "program.label.availableToGoBack": "可返回前題",
   "program.label.availableToRetry": "可重新測驗",
@@ -1786,7 +1835,7 @@
   "promotion.label.points": "點數",
   "promotion.label.scheme": "格式",
   "promotion.label.selectMember": "選擇會員",
-  "promotion.label.selectProducts": "選擇兌換項目",
+  "promotion.label.selectProducts": "選擇項目",
   "promotion.label.sendingCoin": "發送代幣",
   "promotion.label.sendingPoint": "發送點數",
   "promotion.label.title": "項目",
@@ -1810,7 +1859,7 @@
   "promotion.text.exchangedCount": "{exchanged}/{total} 張",
   "promotion.text.revokeNotation": "系統將收回此次發送的點數，學員後台並不會留下任何收回紀錄",
   "promotion.text.selectProducts": "選擇指定項目",
-  "promotion.text.sentUsedCount": "總量{total} / 發送{exchanged} / 使用{used}",
+  "promotion.text.sentUsedCount": "總量{total} / 發送{exchanged}",
   "promotion.text.titlePlaceholder": "請填寫項目名稱",
   "promotion.ui.addVoucher": "新增兌換券",
   "promotion.ui.createCouponPlan": "建立折價方案",
