[UPDATE] yarn trans

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -1843,6 +1843,7 @@
   "program.ui.uploadMaterial": "Upload Material",
   "program.ui.uploadVideo": "Upload Video",
   "program.ui.uploadedCaptions": "Uploaded Captions",
+  "programPackage.ProgramPackageBasicFrom.tag": "標籤",
   "programPackage.label.availableForLimitTime": "Available for viewing {amount} {unit}",
   "programPackage.label.delete": "Delete Course Package",
   "programPackage.label.generalSetting": "General Setting",
@@ -1886,6 +1887,7 @@
   "project.*.sortProjectPlan": "Project Sort",
   "project.*.sponsor": "Sponsor",
   "project.*.unnamedProject": "Unnamed Project",
+  "project.ProjectBasicForm.tag": "標籤",
   "project.ProjectPlanAdminModal.deliverables": "Project Deliverables",
   "project.ProjectPlanCard.notSale": "已停售",
   "project.ProjectPlanCard.onSale": "發售中",
