--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -1843,6 +1843,7 @@
   "program.ui.uploadMaterial": "Unggah Materi",
   "program.ui.uploadVideo": "Unggah Video",
   "program.ui.uploadedCaptions": "Teks yang Diunggah",
+  "programPackage.ProgramPackageBasicFrom.tag": "標籤",
   "programPackage.label.availableForLimitTime": "Tersedia untuk dilihat {jumlah} {satuan}",
   "programPackage.label.delete": "Hapus Paket Kursus",
   "programPackage.label.generalSetting": "Pengaturan Umum",
@@ -1886,6 +1887,7 @@
   "project.*.sortProjectPlan": "Urutan Proyek",
   "project.*.sponsor": "Sponsor",
   "project.*.unnamedProject": "Proyek Tanpa Nama",
+  "project.ProjectBasicForm.tag": "標籤",
   "project.ProjectPlanAdminModal.deliverables": "Hasil Proyek",
   "project.ProjectPlanCard.notSale": "已停售",
   "project.ProjectPlanCard.onSale": "發售中",
