--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -1843,6 +1843,7 @@
   "program.ui.uploadMaterial": " Tải lên tài liệu ",
   "program.ui.uploadVideo": "Tải lên Video",
   "program.ui.uploadedCaptions": " Phụ đề đã Tải lên ",
+  "programPackage.ProgramPackageBasicFrom.tag": "標籤",
   "programPackage.label.availableForLimitTime": " Có sẵn để xem {số tiền} {đơn vị} ",
   "programPackage.label.delete": " Xóa Gói Khóa học ",
   "programPackage.label.generalSetting": " Cài đặt Chung ",
@@ -1886,6 +1887,7 @@
   "project.*.sortProjectPlan": " Sắp xếp dự án ",
   "project.*.sponsor": "發起者",
   "project.*.unnamedProject": "未命名專案",
+  "project.ProjectBasicForm.tag": "標籤",
   "project.ProjectPlanAdminModal.deliverables": " Project Deliverables ",
   "project.ProjectPlanCard.notSale": "已停售",
   "project.ProjectPlanCard.onSale": "發售中",
