--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -1843,6 +1843,7 @@
   "program.ui.uploadMaterial": "上传教材",
   "program.ui.uploadVideo": "Upload Video",
   "program.ui.uploadedCaptions": "已上传字幕",
+  "programPackage.ProgramPackageBasicFrom.tag": "標籤",
   "programPackage.label.availableForLimitTime": "可观看 {amount} {unit}",
   "programPackage.label.delete": "删除课程组合",
   "programPackage.label.generalSetting": "一般设定",
@@ -1886,6 +1887,7 @@
   "project.*.sortProjectPlan": "方案排序",
   "project.*.sponsor": "发起者",
   "project.*.unnamedProject": "未命名专案",
+  "project.ProjectBasicForm.tag": "標籤",
   "project.ProjectPlanAdminModal.deliverables": "交付项目",
   "project.ProjectPlanCard.notSale": "已停售",
   "project.ProjectPlanCard.onSale": "發售中",
