--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -1843,6 +1843,7 @@
   "program.ui.uploadMaterial": "上傳教材",
   "program.ui.uploadVideo": "上傳影片",
   "program.ui.uploadedCaptions": "已上傳字幕",
+  "programPackage.ProgramPackageBasicFrom.tag": "標籤",
   "programPackage.label.availableForLimitTime": "可觀看 {amount} {unit}",
   "programPackage.label.delete": "刪除課程組合",
   "programPackage.label.generalSetting": "一般設定",
@@ -1886,6 +1887,7 @@
   "project.*.sortProjectPlan": "方案排序",
   "project.*.sponsor": "發起者",
   "project.*.unnamedProject": "未命名專案",
+  "project.ProjectBasicForm.tag": "標籤",
   "project.ProjectPlanAdminModal.deliverables": "交付項目",
   "project.ProjectPlanCard.notSale": "已停售",
   "project.ProjectPlanCard.onSale": "發售中",
