[FEATURE] change editor spacing style

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -1048,6 +1048,7 @@
   "craft.TitleSettings.titleContent": "Title Content",
   "craft.inputs.border.none": "No border",
   "craft.inputs.border.solid": "Solid line",
+  "craft.inputs.spacing": "Spacing",
   "craft.inputs.margin": "Margin",
   "craft.inputs.padding": "Padding",
   "craft.label.actionSetting": "Action Setting",
@@ -1145,6 +1146,8 @@
   "craft.label.url": "URL",
   "craft.label.urlPath": "URL Path",
   "craft.label.variant": "Variant",
+  "craft.label.right": "right",
+  "craft.label.left": "left",
   "craft.settings.responsiveSelector.desktop": "Desktop",
   "craft.settings.responsiveSelector.mobile": "Mobile",
   "craft.settings.responsiveSelector.tablet": "Tablet",
