--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -1048,6 +1048,7 @@
   "craft.TitleSettings.titleContent": "Konten Judul",
   "craft.inputs.border.none": "Tanpa batas",
   "craft.inputs.border.solid": "Garis solid",
+  "craft.inputs.spacing": "Jarak",
   "craft.inputs.margin": "Margin",
   "craft.inputs.padding": "Padding",
   "craft.label.actionSetting": "Pengaturan Tindakan",
@@ -1145,6 +1146,8 @@
   "craft.label.url": "URL",
   "craft.label.urlPath": "Jalur URL",
   "craft.label.variant": "Varian",
+  "craft.label.right": "Baik",
+  "craft.label.left": "Kiri",
   "craft.settings.responsiveSelector.desktop": "Desktop",
   "craft.settings.responsiveSelector.mobile": "Seluler",
   "craft.settings.responsiveSelector.tablet": "Tablet",
