--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -1048,6 +1048,7 @@
   "craft.TitleSettings.titleContent": " Nội dung Tiêu đề ",
   "craft.inputs.border.none": "Không có đường viền ",
   "craft.inputs.border.solid": " Đường liền nét ",
+  "craft.inputs.spacing": "khoảng cách",
   "craft.inputs.margin": " Ký quỹ ",
   "craft.inputs.padding": "Đệm ",
   "craft.label.actionSetting": " Cài đặt hành động ",
@@ -1145,6 +1146,8 @@
   "craft.label.url": " URL ",
   "craft.label.urlPath": " Đường dẫn URL ",
   "craft.label.variant": "Biến thể ",
+  "craft.label.right": "bên phải",
+  "craft.label.left": "bên trái",
   "craft.settings.responsiveSelector.desktop": " Máy tính để bàn ",
   "craft.settings.responsiveSelector.mobile": " Di động ",
   "craft.settings.responsiveSelector.tablet": " Máy tính bảng ",
