--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -1048,6 +1048,7 @@
   "craft.TitleSettings.titleContent": "标题内容",
   "craft.inputs.border.none": "无框线",
   "craft.inputs.border.solid": "实线",
+  "craft.inputs.spacing": "间距",
   "craft.inputs.margin": "外距",
   "craft.inputs.padding": "内距",
   "craft.label.actionSetting": "行为设定",
@@ -1145,6 +1146,8 @@
   "craft.label.url": "网址",
   "craft.label.urlPath": "网址路径",
   "craft.label.variant": "变化",
+  "craft.label.right": "右",
+  "craft.label.left": "左",
   "craft.settings.responsiveSelector.desktop": "桌面",
   "craft.settings.responsiveSelector.mobile": "手机",
   "craft.settings.responsiveSelector.tablet": "平板",
