--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -1048,6 +1048,7 @@
   "craft.TitleSettings.titleContent": "標題內容",
   "craft.inputs.border.none": "無框線",
   "craft.inputs.border.solid": "實線",
+  "craft.inputs.spacing": "間距",
   "craft.inputs.margin": "外距",
   "craft.inputs.padding": "內距",
   "craft.label.actionSetting": "行為設定",
@@ -1145,6 +1146,8 @@
   "craft.label.url": "網址",
   "craft.label.urlPath": "網址路徑",
   "craft.label.variant": "變化",
+  "craft.label.right": "右",
+  "craft.label.left": "左",
   "craft.settings.responsiveSelector.desktop": "桌面",
   "craft.settings.responsiveSelector.mobile": "手機",
   "craft.settings.responsiveSelector.tablet": "平板",
