[BUGFIX] fix SpaceStyleInput translation id

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -1048,9 +1048,6 @@
   "craft.TitleSettings.titleContent": "Title Content",
   "craft.inputs.border.none": "No border",
   "craft.inputs.border.solid": "Solid line",
-  "craft.inputs.spacing": "Spacing",
-  "craft.inputs.margin": "Margin",
-  "craft.inputs.padding": "Padding",
   "craft.label.actionSetting": "Action Setting",
   "craft.label.activity": "Activity",
   "craft.label.activityBlock": "Activity Block",
@@ -1146,11 +1143,16 @@
   "craft.label.url": "URL",
   "craft.label.urlPath": "URL Path",
   "craft.label.variant": "Variant",
-  "craft.label.right": "right",
-  "craft.label.left": "left",
   "craft.settings.responsiveSelector.desktop": "Desktop",
   "craft.settings.responsiveSelector.mobile": "Mobile",
   "craft.settings.responsiveSelector.tablet": "Tablet",
+  "craft.SpaceStyleInput.spacing": "Spacing",
+  "craft.SpaceStyleInput.margin": "Margin",
+  "craft.SpaceStyleInput.padding": "Padding",
+  "craft.SpaceStyleInput.top": "Top",
+  "craft.SpaceStyleInput.right": "Right",
+  "craft.SpaceStyleInput.bottom": "Bottom",
+  "craft.SpaceStyleInput.left": "Left",
   "craft.text.chooseCategories": "Choose Categories",
   "craft.text.chooseTags": "Choose Tags",
   "craft.text.deletePageConfirmation": "Once a page is deleted, it cannot be recovered. Are you sure you want to delete it?",
