--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -1048,9 +1048,6 @@
   "craft.TitleSettings.titleContent": "Konten Judul",
   "craft.inputs.border.none": "Tanpa batas",
   "craft.inputs.border.solid": "Garis solid",
-  "craft.inputs.spacing": "Jarak",
-  "craft.inputs.margin": "Margin",
-  "craft.inputs.padding": "Padding",
   "craft.label.actionSetting": "Pengaturan Tindakan",
   "craft.label.activity": "Aktivitas",
   "craft.label.activityBlock": "Blok Aktivitas",
@@ -1146,11 +1143,16 @@
   "craft.label.url": "URL",
   "craft.label.urlPath": "Jalur URL",
   "craft.label.variant": "Varian",
-  "craft.label.right": "Baik",
-  "craft.label.left": "Kiri",
   "craft.settings.responsiveSelector.desktop": "Desktop",
   "craft.settings.responsiveSelector.mobile": "Seluler",
   "craft.settings.responsiveSelector.tablet": "Tablet",
+  "craft.SpaceStyleInput.spacing": "Jarak",
+  "craft.SpaceStyleInput.margin": "Batas",
+  "craft.SpaceStyleInput.padding": "Lapisan",
+  "craft.SpaceStyleInput.top": "Atas",
+  "craft.SpaceStyleInput.right": "Baik",
+  "craft.SpaceStyleInput.bottom": "Bawah",
+  "craft.SpaceStyleInput.left": "Kiri",
   "craft.text.chooseCategories": "Pilih Kategori",
   "craft.text.chooseTags": "Pilih Tag",
   "craft.text.deletePageConfirmation": "Setelah halaman dihapus, halaman tersebut tidak dapat dipulihkan. Apakah Anda yakin ingin menghapusnya?",
