--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -1048,9 +1048,6 @@
   "craft.TitleSettings.titleContent": " Nội dung Tiêu đề ",
   "craft.inputs.border.none": "Không có đường viền ",
   "craft.inputs.border.solid": " Đường liền nét ",
-  "craft.inputs.spacing": "khoảng cách",
-  "craft.inputs.margin": " Ký quỹ ",
-  "craft.inputs.padding": "Đệm ",
   "craft.label.actionSetting": " Cài đặt hành động ",
   "craft.label.activity": " Hoạt động ",
   "craft.label.activityBlock": " Khối hoạt động ",
@@ -1146,11 +1143,16 @@
   "craft.label.url": " URL ",
   "craft.label.urlPath": " Đường dẫn URL ",
   "craft.label.variant": "Biến thể ",
-  "craft.label.right": "bên phải",
-  "craft.label.left": "bên trái",
   "craft.settings.responsiveSelector.desktop": " Máy tính để bàn ",
   "craft.settings.responsiveSelector.mobile": " Di động ",
   "craft.settings.responsiveSelector.tablet": " Máy tính bảng ",
+  "craft.SpaceStyleInput.spacing": "khoảng cách",
+  "craft.SpaceStyleInput.margin": " Ký quỹ ",
+  "craft.SpaceStyleInput.padding": "Đệm ",
+  "craft.SpaceStyleInput.top": "đứng đầu",
+  "craft.SpaceStyleInput.right": "bên phải",
+  "craft.SpaceStyleInput.bottom": "đáy",
+  "craft.SpaceStyleInput.left": "bên trái",
   "craft.text.chooseCategories": " Chọn danh mục ",
   "craft.text.chooseTags": " Chọn thẻ ",
   "craft.text.deletePageConfirmation": " Khi một trang bị xóa, nó sẽ không thể khôi phục được. Bạn có chắc chắn muốn xóa nó không? ",
