--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -1048,9 +1048,6 @@
   "craft.TitleSettings.titleContent": "標題內容",
   "craft.inputs.border.none": "無框線",
   "craft.inputs.border.solid": "實線",
-  "craft.inputs.spacing": "間距",
-  "craft.inputs.margin": "外距",
-  "craft.inputs.padding": "內距",
   "craft.label.actionSetting": "行為設定",
   "craft.label.activity": "活動",
   "craft.label.activityBlock": "活動區塊",
@@ -1146,11 +1143,16 @@
   "craft.label.url": "網址",
   "craft.label.urlPath": "網址路徑",
   "craft.label.variant": "變化",
-  "craft.label.right": "右",
-  "craft.label.left": "左",
   "craft.settings.responsiveSelector.desktop": "桌面",
   "craft.settings.responsiveSelector.mobile": "手機",
   "craft.settings.responsiveSelector.tablet": "平板",
+  "craft.SpaceStyleInput.spacing": "間距",
+  "craft.SpaceStyleInput.margin": "外距",
+  "craft.SpaceStyleInput.padding": "內距",
+  "craft.SpaceStyleInput.top": "上",
+  "craft.SpaceStyleInput.right": "右",
+  "craft.SpaceStyleInput.bottom": "下",
+  "craft.SpaceStyleInput.left": "左",
   "craft.text.chooseCategories": "選擇分類",
   "craft.text.chooseTags": "選擇標籤",
   "craft.text.deletePageConfirmation": "頁面一經刪除即不可恢復，確定要刪除嗎？",
