[FEATURE] add currency in merchandise

--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -1420,6 +1420,7 @@
   "merchandise.label.basicSettings": "基本設定",
   "merchandise.label.comment": "備註",
   "merchandise.label.cover": "封面圖片",
+  "merchandise.label.currency": "幣值",
   "merchandise.label.customizedPhysical": "客製實體",
   "merchandise.label.customizedPhysicalMerchandise": "客製實體商品",
   "merchandise.label.customizedPhysicalTag": "客製實體",
